Use the factory methods from java.util.List, minor refactorings